# wix-sheets-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  cloudbuild.yaml  docker-compose.yml  main.py  pyproject.toml
api/: __init__.py  routes.py
config/: __init__.py  settings.py
html/: Wix_page.js  index.html
schemas/: sheet_req.py
services/: __init__.py  sheets_service.py
