[project]
name = "wix-backend"
version = "0.1.0"
description = "Backend API for Wix"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "google-api-python-client>=2.188.0",
    "google-auth>=2.47.0",
    "orjson>=3.11.5",
    "pre-commit>=4.5.1",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]
